[workspace]
members = [
    "crates/use-physics",
    "crates/use-motion",
    "crates/use-force",
    "crates/use-energy",
    "crates/use-work",
    "crates/use-power",
    "crates/use-fluid",
    "crates/use-electricity",
    "crates/use-magnetism",
    "crates/use-pressure",
    "crates/use-density",
    "crates/use-gravity",
    "crates/use-momentum",
    "crates/use-particle",
    "crates/use-thermodynamics",
]
resolver = "2"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/RustUse/use-physics"
rust-version = "1.95.0"
version = "0.0.1"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-motion",
    "use-force",
    "use-energy",
    "use-work",
    "use-power",
    "use-fluid",
    "use-electricity",
    "use-magnetism",
    "use-pressure",
    "use-density",
    "use-gravity",
    "use-momentum",
    "use-particle",
    "use-thermodynamics",
    "use-physics",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
