[workspace]
members = [
    "crates/use-physics",
    "crates/use-motion",
    "crates/use-rotation",
    "crates/use-force",
    "crates/use-torque",
    "crates/use-energy",
    "crates/use-work",
    "crates/use-power",
    "crates/use-fluid",
    "crates/use-electricity",
    "crates/use-magnetism",
    "crates/use-electromagnetism",
    "crates/use-pressure",
    "crates/use-density",
    "crates/use-gravity",
    "crates/use-orbit",
    "crates/use-momentum",
    "crates/use-relativity",
    "crates/use-quantum",
    "crates/use-particle",
    "crates/use-nuclear",
    "crates/use-thermodynamics",
]
resolver = "2"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/RustUse/use-physics"
rust-version = "1.95.0"
version = "0.0.1"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-motion",
    "use-rotation",
    "use-force",
    "use-torque",
    "use-energy",
    "use-work",
    "use-power",
    "use-fluid",
    "use-electricity",
    "use-magnetism",
    "use-electromagnetism",
    "use-pressure",
    "use-density",
    "use-gravity",
    "use-orbit",
    "use-momentum",
    "use-relativity",
    "use-quantum",
    "use-particle",
    "use-nuclear",
    "use-thermodynamics",
    "use-physics",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
