[workspace]
members = [
    "crates/use-physics",
    "crates/use-motion",
    "crates/use-oscillation",
    "crates/use-rotation",
    "crates/use-rigidbody",
    "crates/use-force",
    "crates/use-torque",
    "crates/use-statics",
    "crates/use-energy",
    "crates/use-work",
    "crates/use-power",
    "crates/use-fluid",
    "crates/use-electricity",
    "crates/use-magnetism",
    "crates/use-electromagnetism",
    "crates/use-plasma",
    "crates/use-pressure",
    "crates/use-elasticity",
    "crates/use-density",
    "crates/use-gravity",
    "crates/use-orbit",
    "crates/use-momentum",
    "crates/use-collision",
    "crates/use-relativity",
    "crates/use-quantum",
    "crates/use-particle",
    "crates/use-nuclear",
    "crates/use-radiation",
    "crates/use-thermodynamics",
]
resolver = "2"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/RustUse/use-physics"
rust-version = "1.95.0"
version = "0.0.2"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-motion",
    "use-oscillation",
    "use-rotation",
    "use-rigidbody",
    "use-force",
    "use-torque",
    "use-statics",
    "use-energy",
    "use-work",
    "use-power",
    "use-fluid",
    "use-electricity",
    "use-magnetism",
    "use-electromagnetism",
    "use-plasma",
    "use-pressure",
    "use-elasticity",
    "use-density",
    "use-gravity",
    "use-orbit",
    "use-momentum",
    "use-collision",
    "use-relativity",
    "use-quantum",
    "use-particle",
    "use-nuclear",
    "use-radiation",
    "use-thermodynamics",
    "use-physics",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
