[package]
name = "use-collision"
description = "One-dimensional collision helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-collision"
keywords = ["collision", "restitution", "impulse", "kinetic-energy", "physics"]
categories = ["science", "mathematics"]

[lints]
workspace = true
