[package]
name = "use-density"
description = "Density, mass, and volume helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-density"
keywords = ["density", "mass", "volume", "physics", "material"]
categories = ["science", "mathematics"]

[[example]]
name = "use-density-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
