[package]
name = "use-elasticity"
description = "Scalar elasticity and mechanics-of-materials helpers for RustUse"
publish = true
authors.workspace = true
version = "0.0.2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-elasticity"
keywords = ["elasticity", "stress", "strain", "modulus", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-elasticity-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
