[package]
name = "use-electricity"
description = "Electricity and simple circuit helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-electricity"
keywords = ["electricity", "circuit", "voltage", "current", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-electricity-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
