[package]
name = "use-fluid"
description = "Fluid mechanics scalar helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-fluid"
keywords = ["fluid", "buoyancy", "flow", "reynolds", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-fluid-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
