[package]
name = "use-magnetism"
description = "Magnetism-specific scalar helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-magnetism"
keywords = ["magnetism", "magnetic-field", "flux", "physics", "electromagnetism"]
categories = ["science", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "use-magnetism-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
