[package]
name = "use-momentum"
description = "Momentum, impulse, and collision helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-momentum"
keywords = ["momentum", "impulse", "collision", "physics", "recoil"]
categories = ["science", "mathematics"]

[lints]
workspace = true
