[package]
name = "use-motion"
description = "Basic kinematics helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-motion"
keywords = ["motion", "kinematics", "speed", "velocity", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-motion-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
