[package]
name = "use-nuclear"
description = "Radioactive decay and nuclear scalar helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-nuclear"
keywords = ["nuclear", "decay", "activity", "binding-energy", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-nuclear-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true