[package]
name = "use-orbit"
description = "Orbital mechanics helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-orbit"
keywords = ["orbit", "orbital", "physics", "gravity", "mechanics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-orbit-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
