[package]
name = "use-physics"
description = "Composable facade crate for RustUse physics helpers"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-physics"
keywords = ["physics", "motion", "force", "energy", "pressure"]
categories = ["science", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["full"]
motion = ["dep:use-motion"]
rotation = ["dep:use-rotation"]
force = ["dep:use-force"]
torque = ["dep:use-torque"]
energy = ["dep:use-energy"]
work = ["dep:use-work"]
power = ["dep:use-power"]
electricity = ["dep:use-electricity"]
magnetism = ["dep:use-magnetism"]
pressure = ["dep:use-pressure"]
fluid = ["dep:use-fluid"]
density = ["dep:use-density"]
gravity = ["dep:use-gravity"]
momentum = ["dep:use-momentum"]
particle = ["dep:use-particle"]
thermodynamics = ["dep:use-thermodynamics"]
full = [
    "motion",
    "rotation",
    "force",
    "torque",
    "energy",
    "work",
    "power",
    "electricity",
    "magnetism",
    "pressure",
    "fluid",
    "density",
    "gravity",
    "momentum",
    "particle",
    "thermodynamics",
]

[dependencies]
use-density = { version = "0.0.1", path = "../use-density", optional = true }
use-energy = { version = "0.0.1", path = "../use-energy", optional = true }
use-electricity = { version = "0.0.1", path = "../use-electricity", optional = true }
use-force = { version = "0.0.1", path = "../use-force", optional = true }
use-fluid = { version = "0.0.1", path = "../use-fluid", optional = true }
use-gravity = { version = "0.0.1", path = "../use-gravity", optional = true }
use-magnetism = { version = "0.0.1", path = "../use-magnetism", optional = true }
use-momentum = { version = "0.0.1", path = "../use-momentum", optional = true }
use-motion = { version = "0.0.1", path = "../use-motion", optional = true }
use-particle = { version = "0.0.1", path = "../use-particle", optional = true }
use-power = { version = "0.0.1", path = "../use-power", optional = true }
use-pressure = { version = "0.0.1", path = "../use-pressure", optional = true }
use-rotation = { version = "0.0.1", path = "../use-rotation", optional = true }
use-thermodynamics = { version = "0.0.1", path = "../use-thermodynamics", optional = true }
use-torque = { version = "0.0.1", path = "../use-torque", optional = true }
use-work = { version = "0.0.1", path = "../use-work", optional = true }

[[example]]
name = "facade_force_energy"
path = "examples/facade_force_energy.rs"
required-features = ["force", "energy"]

[[example]]
name = "facade_particle"
path = "examples/facade_particle.rs"
required-features = ["particle"]

[lints]
workspace = true
