[package]
name = "use-physics"
description = "Composable facade crate for RustUse physics helpers"
publish = true
authors.workspace = true
version = "0.0.2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-physics"
keywords = ["physics", "motion", "force", "energy", "pressure"]
categories = ["science", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["full"]
motion = ["dep:use-motion"]
oscillation = ["dep:use-oscillation"]
rotation = ["dep:use-rotation"]
rigidbody = ["dep:use-rigidbody"]
force = ["dep:use-force"]
torque = ["dep:use-torque"]
statics = ["dep:use-statics"]
energy = ["dep:use-energy"]
collision = ["dep:use-collision"]
work = ["dep:use-work"]
power = ["dep:use-power"]
electricity = ["dep:use-electricity"]
magnetism = ["dep:use-magnetism"]
electromagnetism = ["dep:use-electromagnetism"]
plasma = ["dep:use-plasma"]
pressure = ["dep:use-pressure"]
elasticity = ["dep:use-elasticity"]
fluid = ["dep:use-fluid"]
density = ["dep:use-density"]
gravity = ["dep:use-gravity"]
orbit = ["dep:use-orbit"]
momentum = ["dep:use-momentum"]
relativity = ["dep:use-relativity"]
quantum = ["dep:use-quantum"]
particle = ["dep:use-particle"]
nuclear = ["dep:use-nuclear"]
radiation = ["dep:use-radiation"]
thermodynamics = ["dep:use-thermodynamics"]
full = [
    "motion",
    "oscillation",
    "rotation",
    "rigidbody",
    "force",
    "torque",
    "statics",
    "energy",
    "collision",
    "work",
    "power",
    "electricity",
    "magnetism",
    "electromagnetism",
    "plasma",
    "pressure",
    "elasticity",
    "fluid",
    "density",
    "gravity",
    "orbit",
    "momentum",
    "relativity",
    "quantum",
    "particle",
    "nuclear",
    "radiation",
    "thermodynamics",
]

[dependencies]
use-collision = { version = "0.0.1", path = "../use-collision", optional = true }
use-density = { version = "0.0.1", path = "../use-density", optional = true }
use-energy = { version = "0.0.1", path = "../use-energy", optional = true }
use-electricity = { version = "0.0.1", path = "../use-electricity", optional = true }
use-elasticity = { version = "0.0.2", path = "../use-elasticity", optional = true }
use-electromagnetism = { version = "0.0.1", path = "../use-electromagnetism", optional = true }
use-force = { version = "0.0.1", path = "../use-force", optional = true }
use-fluid = { version = "0.0.1", path = "../use-fluid", optional = true }
use-gravity = { version = "0.0.1", path = "../use-gravity", optional = true }
use-magnetism = { version = "0.0.1", path = "../use-magnetism", optional = true }
use-momentum = { version = "0.0.1", path = "../use-momentum", optional = true }
use-motion = { version = "0.0.1", path = "../use-motion", optional = true }
use-nuclear = { version = "0.0.1", path = "../use-nuclear", optional = true }
use-oscillation = { version = "0.0.1", path = "../use-oscillation", optional = true }
use-orbit = { version = "0.0.1", path = "../use-orbit", optional = true }
use-particle = { version = "0.0.1", path = "../use-particle", optional = true }
use-plasma = { version = "0.0.1", path = "../use-plasma", optional = true }
use-power = { version = "0.0.1", path = "../use-power", optional = true }
use-pressure = { version = "0.0.1", path = "../use-pressure", optional = true }
use-quantum = { version = "0.0.1", path = "../use-quantum", optional = true }
use-radiation = { version = "0.0.1", path = "../use-radiation", optional = true }
use-relativity = { version = "0.0.1", path = "../use-relativity", optional = true }
use-rigidbody = { version = "0.0.1", path = "../use-rigidbody", optional = true }
use-rotation = { version = "0.0.1", path = "../use-rotation", optional = true }
use-statics = { version = "0.0.1", path = "../use-statics", optional = true }
use-thermodynamics = { version = "0.0.1", path = "../use-thermodynamics", optional = true }
use-torque = { version = "0.0.1", path = "../use-torque", optional = true }
use-work = { version = "0.0.1", path = "../use-work", optional = true }

[[example]]
name = "facade_force_energy"
path = "examples/facade_force_energy.rs"
required-features = ["force", "energy"]

[[example]]
name = "facade_particle"
path = "examples/facade_particle.rs"
required-features = ["particle"]

[[example]]
name = "facade_quantum"
path = "examples/facade_quantum.rs"
required-features = ["quantum"]

[lints]
workspace = true
