[package]
name = "use-plasma"
description = "Small scalar plasma physics helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-plasma"
keywords = ["plasma", "debye", "alfven", "physics", "gyro"]
categories = ["science", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true