[package]
name = "use-power"
description = "Average, mechanical, and electrical power helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-power"
keywords = ["power", "electrical", "mechanical", "physics", "energy"]
categories = ["science", "mathematics"]

[[example]]
name = "use-power-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true