[package]
name = "use-pressure"
description = "Pressure and hydrostatic pressure helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-pressure"
keywords = ["pressure", "hydrostatic", "gauge", "physics", "force"]
categories = ["science", "mathematics"]

[[example]]
name = "use-pressure-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
