[package]
name = "use-quantum"
description = "Scalar quantum physics helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-quantum"
keywords = ["quantum", "photon", "de-broglie", "bohr", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-quantum-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true