[package]
name = "use-radiation"
description = "Small radiation physics scalar helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-radiation"
keywords = ["radiation", "dose", "attenuation", "fluence", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-radiation-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
