[package]
name = "use-relativity"
description = "Small special relativity scalar helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-relativity"
keywords = ["relativity", "lorentz", "doppler", "momentum", "physics"]
categories = ["science", "mathematics"]

[lints]
workspace = true
