[package]
name = "use-rigidbody"
description = "Rigid-body mass properties and scalar mechanics helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-rigidbody"
keywords = ["physics", "rigid-body", "inertia", "momentum", "kinematics"]
categories = ["science", "mathematics"]

[lints]
workspace = true
