[package]
name = "use-thermodynamics"
description = "Ideal gas and heat-energy helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-thermodynamics"
keywords = ["thermodynamics", "gas", "heat", "temperature", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-thermodynamics-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
