[package]
name = "use-torque"
description = "Torque and lever-arm helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-torque"
keywords = ["physics", "torque", "lever-arm", "moment", "rotation"]
categories = ["science", "mathematics"]

[lints]
workspace = true
