[package]
name = "use-work"
description = "Mechanical work helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-work"
keywords = ["work", "mechanics", "force", "energy", "physics"]
categories = ["science", "mathematics"]

[[example]]
name = "use-work-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
